# OMR-codex-test

./: .gitignore  README.md  pyproject.toml  requirements.txt  template.json
PIL/: Image.py  ImageDraw.py  ImageFont.py  ImageStat.py  __init__.py
artifacts/modern_omr/data/: modern_exam_template.json
artifacts/modern_omr/evaluations/: modern_exam_results.json
artifacts/modern_omr/filled/: README.md
artifacts/modern_omr/sheets/: README.md
omr/: __init__.py  builder.py  cli.py  config.py  demo.py  evaluator.py  template.py  webapp.py
omr/templates/: base.html  build.html  demo.html  designer.html  grade.html  index.html
tests/: test_builder.py  test_cli.py  test_evaluator.py  test_template.py  test_webapp.py
